--- a/src/i18n/locales/uk.json
+++ b/src/i18n/locales/uk.json
@@ -6,8 +6,9 @@
   },
   "header": {
     "prg01": "Куб найновіший",
-    "prg02": "Куб v.2.0",
-    "prg03": "Куб старий",
+    "prg02": "Куб v.3.0",
+    "prg03": "Куб v.2.0",
+    "prg04": "Куб старий",
     "about": "Про проект"
   },
   "footer": {
@@ -21,10 +22,14 @@
     "disc": "Опис"
   },
   "project2": {
-    "name": "Куб v.2.0",
+    "name": "Куб v.3.0",
     "disc": "Опис"
   },
   "project3": {
+    "name": "Куб v.2.0",
+    "disc": "Опис"
+  },
+  "project4": {
     "name": "Куб старий",
     "disc": "Опис"
   },
