--- a/src/i18n/locales/uk.json
+++ b/src/i18n/locales/uk.json
@@ -36,8 +36,8 @@
   "about": {
     "title": "3D куб, що обертається №2",
     "more01": "Більше інформації...",
-    "more02": "Цей проект надає користувачеві можливість інтерактивно взаємодіяти з 3D-моделлю. В даному випадку з кубиком. Модель можна збільшувати/зменшувати, зупиняти обертання, прокручувати у своєму напрямку тощо.",
-    "more03": "Все це стало можливим завдяки використанню технології Three.js та Three.js Orbit controls.",
+    "more02": "Цей проект є продовженням проекту \"3D куб, що обертається №1\". Додані різні моделі кубиків. Вони рухаються у різних напрямах, перебуваючи на різних орбітах.",
+    "more03": "Для фарбування кубиків використовувалися як чисті кольори, так і готові текстури. На деяких сторонах кубика нанесені зображення.",
     "more04": "Тут БАГАТО цікавого! \uD83D\uDE09\uD83E\uDD13",
     "more05": "Ласкаво просимо! \uD83E\uDD29\uD83D\uDE0E",
     "technologies": "Технології",
