--- a/src/i18n/locales/uk.json
+++ b/src/i18n/locales/uk.json
@@ -5,10 +5,10 @@
     "es": "Іспанська"
   },
   "header": {
-    "prg01": "Куб найновіший",
-    "prg02": "Куб v.3.0",
-    "prg03": "Куб v.2.0",
-    "prg04": "Куб старий",
+    "prg01": "Композиція",
+    "prg02": "Мікс",
+    "prg03": "Текстури",
+    "prg04": "Кольори",
     "about": "Про проект"
   },
   "footer": {
@@ -18,19 +18,19 @@
     "text4": "Усі права захищені"
   },
   "project1": {
-    "name": "Куб найновіший",
+    "name": "Композиція",
     "disc": "Опис"
   },
   "project2": {
-    "name": "Куб v.3.0",
+    "name": "Мікс",
     "disc": "Опис"
   },
   "project3": {
-    "name": "Куб v.2.0",
+    "name": "Текстури",
     "disc": "Опис"
   },
   "project4": {
-    "name": "Куб старий",
+    "name": "Кольори",
     "disc": "Опис"
   },
   "about": {
