--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -6,7 +6,7 @@
   },
   "header": {
     "prg01": "Composition",
-    "prg02": "Mix",
+    "prg02": "Mixture",
     "prg03": "Textures",
     "prg04": "Colors",
     "about": "About"
