--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -22,7 +22,7 @@
     "disc": "Description"
   },
   "project2": {
-    "name": "Mix",
+    "name": "Mixture",
     "disc": "Description"
   },
   "project3": {
