--- a/src/i18n/locales/uk.json
+++ b/src/i18n/locales/uk.json
@@ -34,10 +34,10 @@
     "disc": "Опис"
   },
   "about": {
-    "title": "3D куб, що обертається №2",
+    "title": "CuboVerse",
     "more01": "Більше інформації...",
-    "more02": "Цей проект є продовженням проекту \"3D куб, що обертається №1\". Додані різні моделі кубиків. Вони рухаються у різних напрямах, перебуваючи на різних орбітах.",
-    "more03": "Для фарбування кубиків використовувалися як чисті кольори, так і готові текстури. На деяких сторонах кубика нанесені зображення.",
+    "more02": "CuboVerse — це інтерактивна 3D-платформа, що дозволяє користувачам спостерігати та керувати унікальними моделями кубів.",
+    "more03": "Досліджуйте різноманітні текстури, кольори та рухи кубів у режимі реального часу. Масштабуйте, обертайте та змінюйте напрямок руху кубів, спостерігаючи за їх орбітальним обертанням.",
     "more04": "Тут БАГАТО цікавого! \uD83D\uDE09\uD83E\uDD13",
     "more05": "Ласкаво просимо! \uD83E\uDD29\uD83D\uDE0E",
     "technologies": "Технології",
