--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -34,10 +34,10 @@
     "disc": "Descripción"
   },
   "about": {
-    "title": "Cubo 3D giratorio №2",
+    "title": "CuboVerse",
     "more01": "Más información...",
-    "more02": "Este proyecto es una continuación del proyecto \"Cubo 3D giratorio №1\". Se agregaron diferentes modelos de cubos. Se mueven en diferentes direcciones, estando en diferentes órbitas.",
-    "more03": "Para colorear los cubos se utilizaron tanto colores puros como texturas ya preparadas. Algunas caras del cubo tienen una imagen.",
+    "more02": "CuboVerse es una plataforma interactiva en 3D que permite a los usuarios observar y controlar modelos únicos de cubos.",
+    "more03": "Explora una variedad de texturas, colores y movimientos de los cubos en tiempo real. Escala, rota y cambia la dirección de los cubos mientras observas su rotación orbital.",
     "more04": "¡Hay MUCHAS cosas interesantes aquí! \uD83D\uDE09\uD83E\uDD13",
     "more05": "¡Bienvenido! \uD83E\uDD29\uD83D\uDE0E",
     "technologies": "Tecnologías",
