--- a/src/i18n/locales/uk.json
+++ b/src/i18n/locales/uk.json
@@ -39,7 +39,7 @@
     "more02": "CuboVerse (поєднання слів \"cubo\" (іспанською — куб) і \"universe\" (англійською — всесвіт), тобто \"всесвіт кубів\") — це інтерактивна 3D-платформа, що дозволяє користувачам спостерігати та керувати різноманітними моделями кубів у віртуальному просторі.",
     "more03": "Система надає можливість досліджувати різні текстури, кольори та рухи кубів у режимі реального часу, масштабувати та обертати об'єкти, а також змінювати їх напрямки на орбітах.",
     "more04": "CuboVerse орієнтований на демонстрацію можливостей тривимірної графіки та анімації, надаючи користувачам простий і захопливий досвід взаємодії з 3D-об'єктами.",
-    "more05": "Ласкаво просимо! \uD83E\uDD29\uD83D\uDE0E",
+    "more05": "Ласкаво прошу! \uD83E\uDD29\uD83D\uDE0E",
     "technologies": "Технології",
     "name": "Назва",
     "version": "Версія"
