--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -36,9 +36,9 @@
   "about": {
     "title": "CuboVerse",
     "more01": "Más información...",
-    "more02": "CuboVerse (una combinación de la palabra \"cubo\" (en español, \"cubo\") y \"universe\" (en inglés, \"universo\"), es decir, \"el universo de cubos\") es una plataforma interactiva en 3D que permite a los usuarios observar y controlar diversos modelos de cubos en un espacio virtual.",
-    "more03": "El sistema ofrece la posibilidad de explorar diferentes texturas, colores y movimientos de los cubos en tiempo real, escalar y rotar objetos, así como cambiar sus direcciones en órbitas.",
-    "more04": "CuboVerse está enfocado en demostrar las capacidades de gráficos tridimensionales y animación, proporcionando a los usuarios una experiencia sencilla y atractiva de interacción con objetos en 3D.",
+    "more02": "\uD83E\uDE90 CuboVerse (una combinación de la palabra \"cubo\" (en español, \"cubo\") y \"universe\" (en inglés, \"universo\"), es decir, \"el universo de cubos\") es una plataforma interactiva en 3D que permite a los usuarios observar y controlar diversos modelos de cubos en un espacio virtual.",
+    "more03": "\uD83C\uDFA8 El sistema ofrece la posibilidad de explorar diferentes texturas, colores y movimientos de los cubos en tiempo real, escalar y rotar objetos, así como cambiar sus direcciones en órbitas.",
+    "more04": "\uD83C\uDF1F CuboVerse está enfocado en demostrar las capacidades de gráficos tridimensionales y animación, proporcionando a los usuarios una experiencia sencilla y atractiva de interacción con objetos en 3D.",
     "more05": "¡Bienvenido! \uD83E\uDD29\uD83D\uDE0E",
     "technologies": "Tecnologías",
     "name": "Nombre",
