--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -36,9 +36,9 @@
   "about": {
     "title": "CuboVerse",
     "more01": "More information...",
-    "more02": "CuboVerse (a combination of the Spanish word \"cubo\" (meaning \"cube\") and the English word \"universe\" (meaning \"universe\"), i.e., \"the universe of cubes\") is an interactive 3D platform that allows users to observe and control various cube models in a virtual space.",
-    "more03": "The system provides the ability to explore different textures, colors, and movements of cubes in real-time, scale and rotate objects, as well as change their directions on orbits.",
-    "more04": "CuboVerse is focused on showcasing the capabilities of three-dimensional graphics and animation, providing users with a simple and engaging experience of interacting with 3D objects.",
+    "more02": "\uD83E\uDE90 CuboVerse (a combination of the Spanish word \"cubo\" (meaning \"cube\") and the English word \"universe\" (meaning \"universe\"), i.e., \"the universe of cubes\") is an interactive 3D platform that allows users to observe and control various cube models in a virtual space.",
+    "more03": "\uD83C\uDFA8 The system provides the ability to explore different textures, colors, and movements of cubes in real-time, scale and rotate objects, as well as change their directions on orbits.",
+    "more04": "\uD83C\uDF1F CuboVerse is focused on showcasing the capabilities of three-dimensional graphics and animation, providing users with a simple and engaging experience of interacting with 3D objects.",
     "more05": "Welcome! \uD83E\uDD29\uD83D\uDE0E",
     "technologies": "Technologies",
     "name": "Name",
